[package]
name = "numpy"
version = "0.21.0"
authors = [
    "The rust-numpy Project Developers",
    "PyO3 Project and Contributors <https://github.com/PyO3>"
]
description = "PyO3-based Rust bindings of the NumPy C-API"
documentation = "https://docs.rs/numpy"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/PyO3/rust-numpy"
categories = ["api-bindings", "development-tools::ffi", "science"]
keywords = ["python", "numpy", "ffi", "pyo3"]
license = "BSD-2-Clause"

[dependencies]
half = { version = "2.0", default-features = false, optional = true }
libc = "0.2"
nalgebra = { version = "0.32", default-features = false, optional = true }
num-complex = ">= 0.2, < 0.5"
num-integer = "0.1"
num-traits = "0.2"
ndarray = ">= 0.13, < 0.16"
rustc-hash = "1.1"

[dependencies.pyo3]
git = "https://github.com/nuant-oss/pyo3.git"
tag = "v0.21.0-bigdecimal_support"
default-features = false
features = ["macros"]

[dev-dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["std"] }

[dev-dependencies.pyo3]
git = "https://github.com/nuant-oss/pyo3.git"
tag = "v0.21.0-bigdecimal_support"
default-features = false
features = ["auto-initialize"]

[package.metadata.docs.rs]
all-features = true
